# C2Lab

./: .gitignore  CLAUDE.md  README.md  pr_body.json  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/commands/: plugin-validate.md
.claude/rules/: c2lab-plugin-dev.md  vcs-jj.md
.github/ISSUE_TEMPLATE/: bug_report.yml  plugin-feature.yml  plugin_feature.yml
.github/workflows/: claude-plugin-dev.yml  plugin-cli-review.yml  test-plugins.yml  validate-plugins.yml
activitypub/.claude-plugin/: plugin.json
code-review/.claude-plugin/: plugin.json
code-review/agents/: code-reviewer.md
jj-config/: config.toml  setup.sh
moonrepo/: README.md
moonrepo/.claude-plugin/: plugin.json
mysetup/hooks/: hooks.json
plugins/activitypub/: README.md
plugins/bun/: settings.json
plugins/code-review/: README.md
plugins/gh/: settings.json
plugins/harness-toolkit/: README.md
plugins/jj-vcs-workflow/: README.md  settings.json
plugins/mise/: settings.json
plugins/moonrepo/: README.md  settings.json
plugins/npm/: settings.json
plugins/obs-plugin-dev/: README.md
plugins/ollama-consult/: .mcp.json  README.md  settings.local.json.example
plugins/otel-telemetry/: README.md
plugins/playwright-e2e-tester/: README.md
plugins/pnpm/: settings.json
plugins/pr-lifecycle/: README.md
plugins/protobuf/: README.md
plugins/review-workflow/: README.md
plugins/rust/: README.md  settings.json
plugins/rust-cli-alternatives/: README.md  settings.json
plugins/scaffdog-colocation/: README.md
plugins/tauri-app-dev/: README.md
plugins/tauri-dev/: README.md
plugins/tauri-plugin-dev/: README.md
plugins/tdd-enforce/: README.md
plugins/testing-and-mocking/: README.md
plugins/typescript-react-standards/: README.md
plugins/ui-test-coverage/: README.md
plugins/uv/: settings.json
plugins/vibe-kanban/: .mcp.json  README.md
plugins/wasm-optimizer/: README.md
plugins/yarn/: settings.json
protobuf/.claude-plugin/: plugin.json
rust/: README.md
rust/agents/: code-debugger.md  (+5 more)
scripts/: load-plugins.sh  plugin-cli-review.py  pre-commit-lint.py  smoke-test-hooks.py  validate-plugins.py
(+255 files in other folders)
