[project]
name = "utakata-claude-plugins"
version = "1.0.0"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 88
include = ["**/*.py"]
exclude = [".git", ".jj", "__pycache__"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes（未使用import等）
    "I",   # isort（import順序）
    "B",   # flake8-bugbear
    "UP",  # pyupgrade（構文の近代化）
    "S",   # bandit（セキュリティ）
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # Ruff固有ルール
]
ignore = [
    "T201",   # print文（hookスクリプトは必須）
    "EM101",  # exception message literal
    "EM102",  # f-string in exception
    "TRY003", # long messages in raise
    "RUF002", # 日本語docstringの全角括弧（意図的）
    "RUF003", # 日本語コメントの全角括弧（意図的）
]

[tool.ruff.lint.per-file-ignores]
# S603/S607: cargo コマンドは信頼された固定パスから実行しており、入力検証済み
"plugins/rust/hooks/scripts/hook-tools.py" = ["S603", "S607"]
"plugins/wasm-optimizer/hooks/scripts/detect-heavy-patterns.py" = ["E501"]
"plugins/scaffdog-colocation/hooks/scripts/validate-colocation.py" = ["E501"]
"plugins/rust/hooks/scripts/prompt-check.py" = ["E501"]
# E501: 日本語コメント・メッセージは行長制限を超える場合がある（意図的）
# RUF001: 日本語文字列内の全角括弧は意図的
"plugins/obsidian-bridge/hooks/scripts/vault-recall.py" = ["E501", "RUF001"]
# S603/S607: poml は信頼された固定コマンドから実行、file_path は拡張子・サイズ・パス検証済み
# E501: 日本語コメント・メッセージは行長制限を超える場合がある（意図的）
# RUF001: 日本語文字列内の全角括弧は意図的
"plugins/poml-assist/hooks/scripts/validate-poml.py" = [
    "S603",
    "S607",
    "E501",
    "RUF001",
]
"plugins/poml-assist/hooks/scripts/render-poml.py" = [
    "S603",
    "S607",
    "E501",
    "RUF001",
]
# E501: 日本語コメント・正規表現パターンは行長制限を超える場合がある
# RUF001: 日本語文字列内の全角括弧・×（乗算記号）は意図的
"plugins/ui-test-coverage/scripts/ui_test_coverage.py" = ["E501", "RUF001"]
# S603/S607: jj・ruff は shutil.which で検証済みの信頼されたコマンド
# E501: 日本語エラーメッセージは行長制限を超える場合がある（意図的）
"scripts/pre-commit-lint.py" = ["S603", "S607", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.isort]
known-first-party = []
